fixed build failure